Align compiler release with java.version